[package]
name = "dbpf_reader"
version = "0.1.0"
edition = "2021"
authors = ["ThatRedKite <thatredkite@thatredkite.de>"]
description = "Just a little thing to read Maxis' DBPF Files"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nfd = "0.0.4"
imgui = {version="0.9.0", features=["tables-api"]}
imgui-winit-support = "0.9.0"
imgui-glium-renderer = "0.9.0"
glium = { version = "0.32.1", default-features = true }
clipboard = "0.5"